crates/legacy_ide/src/snapshots/legacy_ide__folding_range__tests__folding_indentation.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "test_folding_range(\"\nif (condition)\n  doSomething()\n  doAnotherThing()\n  andOneMoreThing()\nelse\n  doSomethingElse()\n  andAnotherElseThing()\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 4,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 5,
        start_character: None,
        end_line: 7,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
